# mailindicator

./: .gitignore  DEPENDENCIES  README.md  TODO  mynotes.rst  pylintrc  setup.cfg  setup.py  stdeb.cfg
debian/: changelog  control  copyright
etc/xdg/autostart/: mailindicator.desktop
mailindicator/: __init__.py  config.py  feedparser.py  gmailfeedfetcher.py  gmailoauth2.py  imapfetcher.py  imapstarttls.py  imapstarttlsfetcher.py  localmailboxfetcher.py  logging.py  mailboxmonitor.py  mimailbox.py  network.py  runner.py  statusicon.py
src/mailindicator/: config.py  gmailoauth2.py  imapfetcher.py  localmailboxfetcher.py  logging.py  mailboxmonitor.py  network.py
test/: config.xml  testConfig.py  testGmailfeedfetcher.py  testImapfetcher.py  testImapstarttlsfetcher.py  testLocalmailboxfetcher.py  testMailboxmonitor.py  testPyNotify.py  testSS_CERTIFICATE_VERIFY.py  testconstants.py
