[metadata]
name = mailindicator
version = 0.2
author = Alessio Piccoli
author_email = alepic@geckoblu.net
url = https://github.com/geckoblu/mailindicator
license='GPL v3 or later'
keywords = tools mail
description = Monitors mailboxes for new mail.

[options]
packages=
    src/mailindicator
    src/mailindicator.sanction

scripts =
    bin/mailindicator

install_requires =
    libnotify4
    python3-lxml
    python3-xdg
    python3-feedparser

[options.data_files]
etc/xdg/autostart =
    etc/xdg/autostart/mailindicator.desktop
